--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.0.2",
+    "@eslint/js": "^9.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-html": "^8.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "gh-pages": "^6.1.1",
+    "globals": "^15.0.0",
     "nodemon": "^3.1.0"
   },
   "dependencies": {
