--- a/fly.toml
+++ b/fly.toml
@@ -11,8 +11,8 @@ primary_region = 'iad'
 [[services]]
   internal_port = 8080
   protocol = "tcp"
-  auto_start_machines = true
-  min_machines_running = 1
+  auto_start_machines = false
+  min_machines_running = 0
 
   [[services.ports]]
     handlers = ["tls", "http"]
