--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node ./server/index.js",
     "watch": "nodemon ./server/index.js",
+    "sneeze": "concurrently -P \"NODE_ENV='test' node ./server/index.js\" \"sleep 2; node ./test/sneeze.js {*}\"",
     "lint": "eslint ."
   },
   "author": "",
@@ -14,13 +15,16 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.1.1",
+    "@faker-js/faker": "^8.4.1",
     "@flydotio/dockerfile": "^0.5.6",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-html": "^8.1.0",
     "eslint-plugin-import": "^2.29.1",
     "gh-pages": "^6.1.1",
     "globals": "^15.0.0",
+    "minimist": "^1.2.8",
     "nodemon": "^3.1.0"
   },
   "dependencies": {
